# ROBOT-PRE-KODY

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  Makefile  README.md  count_lines.py  dev_robot_v03.py  dump_repo_code.py  project_status.yml  pyproject.toml  repo_summary.yml  requirements.txt  scan_repo.py  sitecustomize.py  test_chain.duckdb  whitelist.yml  xxxx.py
.github/: pull_request_template.md
daily/: 2025-09-08.md  2025-09-10_ciastkove testovanie.md  2025-09-20|testovanie uprava.md  2025-09-21|robot v04.md  2025-09-23|robot v04.md  2025-09-30|Pytest|Githubtest.md  2025-10-04|transform1.md  2025-10-04|vs code update.md  2025-11-13 - Project overview.md  template.md
data_in/: AT_WR_38_2025_SHOPS_Paniglgasse_anon.xlsx  mock_wr_block.json  mock_wr_total_block.json
data_out/: audit.txt  block.yaml  cells.csv  cells_big.csv  scan.csv  scan_all.csv
data_stage/: robot.duckdb  wr_demo.duckdb  wr_total_demo.duckdb
src/: audit.py  duck_ytd_from_csv.py  io_duckdb.py  scanner.py  transform.py  try_transform_from_anon.py
tests/: detect.py  test_autorun.py  test_duckdb_io.py  test_duckdb_select.py  test_exporter.py  test_loader.py  test_period_normalization.py  test_period_normalization_quarters_halves.py  test_period_normalization_weeks.py  test_pipeline_chain.py  test_robot.py  test_scan_cli.py  test_scan_edge_cases.py  test_scanner.py  test_transform.py  test_transform_contract_min.py  test_transform_months.py  test_transform_perf.py  test_transformer_basic.py  test_validator.py
tools/: update_status_apply.py  update_status_preview.py
(+27 files in other folders)
